--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
-<<<<<<< HEAD
     "bcrypt": "^5.1.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
@@ -18,8 +17,7 @@
     "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
-    "react-icons": "^4.7.1"
-=======
+    "react-icons": "^4.7.1",
     "next": "^15.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,7 +25,6 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
->>>>>>> c7cdeac (retoque)
   },
   "scripts": {
     "start": "react-scripts start",
